<resources>
    <string name="app_name">Depot</string>
    <string name="text_openinventory">Open inventory</string>
    <string name="text_ScanItem">Scan item</string>
    <string name="text_WantedInventory">Wanted inventory list</string>
    <string name="text_ShoppingList">Shopping list</string>
    <string name="text_delete">Delete</string>
    <string name="text_changelevel">Change level</string>
    <string name="text_Add">Add</string>
    <string name="title_activity_main2">Depot</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="text_overview">Overview</string>
    <string name="text_select_menuentry">Please select a menu entry</string>
    <string name="placeholder1" translatable="false">**This should display the item Name and how much of it is left**</string>
    <string name="dialog_camera">camera</string>
    <string name="dialog_how_to_add">How do you want to add the item?</string>
    <string name="dialog_select_add_method">Please select an action</string>
    <string name="dialog_manually">enter manually</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_sign_in">Sing In</string>
    <string name="login_register">Not registered yet?</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_register2">Back to sign in</string>
    <string name="list_view_entry_remove">remove</string>
    <string name="menu_show_current_user">Show current user</string>
    <string name="entry_info_confirm">Confirm</string>
    <string name="entry_info_sure">are you sure you want to update this entry?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>


    <string-array name="units_array">
        <item>Pieces</item>
        <item>Grams</item>
        <item>Kilograms</item>
        <item>Liters</item>
    </string-array>

</resources>
