<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_open_inventory"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/text_openinventory" />
        <item
            android:id="@+id/nav_scan_item"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/text_ScanItem" />
        <item
            android:id="@+id/nav_wanted_items_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/text_WantedInventory" />
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/text_ShoppingList" />
    </group>

</menu>
